--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-laravel-paginex": "^2.0.8",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
