--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.24.0",
     "firebase": "^9.4.0",
     "lodash": "^4.17.21",
@@ -15,6 +16,7 @@
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-html-parser": "^2.0.2",
     "react-laravel-paginex": "^2.0.8",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3",
